<resources>
    <string name="app_name">Map Challenge</string>
    <string name="map_screen_actionbar_title">Find Places</string>
    <string name="label_categories">Categories</string>
    <string name="loading_message">Finding places&#8230;</string>
    <string name="search_again">Search Again</string>
    <string name="gps_error">Please turn on your GPS!</string>
    <string name="location_settings">Location Settings</string>
    <string name="search_location">Search Location</string>
    <string name="search_location_hint">Drag to change search area</string>
    <string name="zoom_in_warning">Zoom in to search</string>
    <string name="zoom_out_warning">Zoom out to search</string>
    <string name="opening_hours">Opening Hours:</string>
    <string name="place_open">Now Open</string>
    <string name="place_closed">Closed</string>
    <string name="address">Address:</string>
    <string name="reviews">Reviews:</string>
    <string name="network_error">Please turn on your network connection!</string>
    <string name="call">Call</string>
</resources>
