<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/mapFrag"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.google.android.gms.maps.SupportMapFragment"/>

    <View
        android:id="@+id/touchInterceptor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/category_dropdown_margin"
        android:layout_marginRight="@dimen/category_dropdown_margin"
        android:layout_gravity="top|right" >

        <android.support.v7.widget.CardView
            android:id="@+id/categoryDropdownToggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardUseCompatPadding="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_categories"
                android:textColor="@color/default_text_color"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:paddingLeft="8dp"
                android:paddingTop="4dp"
                android:paddingRight="2dp"
                android:paddingBottom="4dp"
                android:drawableRight="@drawable/ic_drop_down"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/categoryDropdownSection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardUseCompatPadding="true"
            android:alpha="0"
            android:visibility="gone">

            <ListView
                android:id="@+id/categoryList"
                android:layout_width="@dimen/category_list_width"
                android:layout_height="wrap_content"
                android:layout_gravity="right"/>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/errorSection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/loading_section_bg">

        <ImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:src="@drawable/ic_gps_off"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/default_text_color"
            android:padding="16dp"
            android:textSize="22sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/gps_error"/>

        <TextView
            android:id="@+id/btnLocationSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/settings_btn_bg"
            android:textColor="#ffffffff"
            android:padding="12dp"
            android:textSize="22sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/location_settings"/>

    </LinearLayout>

</FrameLayout>