<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffc6c6c6">

    <!-- IMAGE HEADER -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/imgBanner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/place_image_height"
            android:scaleType="centerCrop"
            android:background="@color/banner_img_bg"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/place_image_gradient_height"
            android:background="@drawable/banner_img_gradient"
            android:layout_gravity="bottom"/>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:text="Something something"
            android:padding="@dimen/content_padding"/>

    </FrameLayout>

    <!-- MAIN CONTENT -->
    <ScrollView
        android:id="@+id/svContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dummy_view_height"
            android:orientation="vertical">

            <!-- DETAILS SECTION -->
            <android.support.v7.widget.CardView
                android:id="@+id/detailsSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/content_padding"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/address"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="#000000"/>

                    <TextView
                        android:id="@+id/tvAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="101 Cecil Street, Singapore 201983"
                        android:textColor="@color/default_text_color"
                        android:textSize="@dimen/default_text_size"
                        android:layout_marginTop="8dp"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>



            <!-- OPENING HOURS -->
            <android.support.v7.widget.CardView
                android:id="@+id/openingHrsSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:id="@+id/llOpeningHrs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/content_padding"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/opening_hours"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:textColor="#000000"/>

                        <Space
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="match_parent" />

                        <TextView
                            android:id="@+id/tvOpenStatus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:textColor="@color/place_closed_text"
                            android:textStyle="italic"
                            android:text="@string/place_closed"/>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/divider_height"
                        android:layout_marginTop="@dimen/content_padding"
                        android:background="@color/divider_color"/>

                    <include
                        layout="@layout/row_opening_time" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!-- REVIEWS SECTION -->
            <android.support.v7.widget.CardView
                android:id="@+id/reviewsSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:id="@+id/llReviews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/content_padding"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/reviews"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:textColor="#000000"/>

                        <Space
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="match_parent" />

                        <TextView
                            android:id="@+id/tvAvgRating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:textColor="@color/place_avg_rating"
                            android:textStyle="italic"
                            android:text="4.6"/>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/divider_height"
                        android:layout_marginTop="@dimen/content_padding"
                        android:background="@color/divider_color"/>

                    <include
                        layout="@layout/row_review" />

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ab_height"
        android:background="@android:color/transparent"
        app:navigationIcon="@drawable/ic_arrow_back_white"/>

</RelativeLayout>